memodump/css/memodump.css
/* ... */
/*=========================================================
   sidebar elements
===========================================================*/

/* taken from bootstrap to fit into wiki output (to enable styles without classes) */
#sidebar ul, #sidebar ol {
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
    line-height: 1;
    word-wrap: break-word;
}
#sidebar li { /* .nav > li */
    position: relative;
    display: block;
}
#sidebar li a { /* .nav > li > a */
    position: relative;
    display: block;
    padding: 10px 15px;
}
#sidebar li a:hover,
#sidebar li a:focus { /* .nav > li > a:* */
    text-decoration: none;
    background-color: #eee;
}
#sidebar li a img { /* .nav > li > a > img */
    max-width: none;
}

/* list style */
#sidebar ul, #sidebar ol {
    background-color: #f7f7f7;
    border-radius: 3px; /* box cornering */
}
/* workaround for cornering when hovered */
#sidebar div > ul > li:first-child,
#sidebar div > ol > li:first-child {
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
}
#sidebar div > ul > li:last-child,
#sidebar div > ol > li:last-child {
    border-bottom-left-radius: inherit;
    border-bottom-right-radius: inherit;
}
#sidebar div > ul > li:first-child > a:hover,
#sidebar div > ul > li:first-child > a:focus,
#sidebar div > ol > li:first-child > a:hover,
#sidebar div > ol > li:first-child > a:focus {
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
}
#sidebar div > ul > li:last-child > a:hover,
#sidebar div > ul > li:last-child > a:focus,
#sidebar div > ol > li:last-child > a:hover,
#sidebar div > ol > li:last-child > a:focus {
    border-bottom-left-radius: inherit;
    border-bottom-right-radius: inherit;
}

/* list padding */
#sidebar ul, #sidebar ol {
    padding: 0px 10px; /* whole list gets paddings on the left and the right */
}
#sidebar li {
    padding: 7px 0px; /* every list item gets paddings on top and bottom */
}
/* padding workaround needed for highlighting behavior when hovered */
#sidebar li a {
    margin: -7px -10px; /* neutralize ul and li paddings */
    padding: 7px 10px; /* and add same amount of paddings manually, which allows colorizing the hole background */
}
/* padding in nested list */
#sidebar ul ul, #sidebar ul ol, #sidebar ol ul, #sidebar ol ol {
    padding: 0;
    padding-top: 7px;
    padding-left: 10px; /* we want to give some additional indent */
    margin: -7px 0px; /* neutralize top/bottom paddings as we have some in our own <li> */
}
/* padding of a in nested list */
#sidebar li li a {
    margin-left: -20px; /* we only need to change what has changed, i.e. padding on the left */
    padding-left: 20px;
}
#sidebar li li li a {
    margin-left: -30px;
    padding-left: 30px;
}
#sidebar li li li li a {
    margin-left: -40px;
    padding-left: 40px;
}
#sidebar li li li li li a { /* enough, isn't it? */
    margin-left: -50px;
    padding-left: 50px;
}
/* workaround for overflow */
#sidebar div > ul,
#sidebar div > ol {
    overflow-x: hidden;
}

/* head indenting */
#sidebar div > h1, #sidebar div > h2, #sidebar div > h3,
#sidebar div > h4, #sidebar div > h5, #sidebar div > h6 {
    padding: 0 15px;
}
#sidebar div > h1[class], #sidebar div > h2[class], #sidebar div > h3[class],
#sidebar div > h4[class], #sidebar div > h5[class], #sidebar div > h6[class] {
    padding: 0;
}
#sidebar h1, #sidebar h2, #sidebar h3,
#sidebar h4, #sidebar h5, #sidebar h6 {
    margin-top: 10px;
    overflow: hidden;
}

/* trails and quicklinks style inspired by Bootstrap */
#sidebar li.active > a,
#sidebar li.active > a:hover,
#sidebar li.active > a:focus {
    color: #999;
    cursor: default;
    background-color: #f2f2f2;
}

/*=========================================================
   content elements
===========================================================*/

/* headers with wider margins */
#content h1 {
    margin-top: 50px;
    margin-bottom: 30px;
}
#content h2 {
    margin-top: 50px;
    margin-bottom: 30px;
}
#content h3 {
    margin-top: 40px;
    margin-bottom: 25px;
}
#content h4, #content h5, #content h6 {
    margin-top: 30px;
    margin-bottom: 20px;
}
/* prettily underlined first level header */
#content h1 {
    position: relative;
    overflow: hidden;
    padding-bottom: 10px;
}
#content h1:before {
    content: "";
    display: inline-block;
    position: absolute;
    bottom: 0px;
    border-bottom: 1px solid #51b3e8;
    width: 100%;
}
#content h1:after {
    content: "";
    display: inline-block;
    position: absolute;
    bottom: 0px;
    border-bottom: 1px solid #eee;
    width: 100%;
}
/* h2 is underlined too, but without accent color */
#content h2 {
    position: relative;
    overflow: hidden;
    padding-bottom: 10px;
}
#content h2:before {
    content: "";
    display: inline-block;
    position: absolute;
    bottom: 0px;
    border-bottom: 1px solid #eee;
    width: 100%;
}

/* table style taken from Bootstrap */
table {
    /* .table */
    margin-bottom: 20px;
}
table > thead > tr > th,
table > tbody > tr > th,
table > tfoot > tr > th,
table > thead > tr > td,
table > tbody > tr > td,
table > tfoot > tr > td {
    /* .table > ... */
    line-height: 1.42857143;
    vertical-align: top;
    /* .table-condensed > ... */
    padding: 5px;
    /* .table-bordered > ... */
    border: 1px solid #ddd;
}
table > thead > tr > th {
    /* .table > ... */
    vertical-align: bottom;
}
table > thead > tr > th,
table > thead > tr > td {
    /* .table-bordered > ... */
    border-bottom-width: 2px;
}
table > tbody + tbody {
    /* .table > ... */
    border-top: 2px solid #ddd;
}
table table {
    /* table table */
    background-color: #fff;
}
table col[class*="col-"] {
    position: static;
    display: table-column;
    float: none;
}
table td[class*="col-"],
table th[class*="col-"] {
    position: static;
    display: table-cell;
    float: none;
}
/* ... */

